# torchscript-cmake-example

./: .gitignore  Makefile  README.md  setup.py  test.py
example/: CMakeLists.txt  example.cpp  example.h
